# dht22-opcua

./: .gitignore  CMakeLists.txt  README.md  dht22.c  somecommands.bk
Doc/: CMakeLists.txt  Toolchain-rpi.cmake  compile.txt  main.cpp  myservice.service  useful-yocto-commands.md
include/: gpio_read.h  open62541.h
src/: gpio_read.c  open62541.c
